# gclib

./: .gitignore  README.md  compile_reqs.sh  pyproject.toml  requirements.txt  requirements_full.txt
gclib/: __init__.py  animation.py  bfn.py  bmg.py  bti.py  bunfoe.py  bunfoe_types.py  fs_helpers.py  gclib_file.py  gcm.py  gx_enums.py  j3d.py  jchunk.py  jpa.py  jpa_enums.py  jpc.py  jpc2.py  rarc.py  rel.py  texture_utils.py  yaz0.py  yaz0_yay0.py
gclib/j3d_chunks/: __init__.py  anf1.py  ank1.py  bp_command.py  drw1.py  evp1.py  inf1.py  jnt1.py  mat3.py  mdl3.py  mdl_command.py  shp1.py  tex1.py  tpt1.py  trk1.py  ttk1.py  vaf1.py  vtx1.py  xf_command.py
gclib/jpa_chunks/: __init__.py  bem1.py  bsp1.py  esp1.py  etx1.py  ssp1.py  tdb1.py  tex1.py
