[project]
name = "gclib"
version = "1.0.0"
description = "Implementations of several file formats used by various GameCube games."
authors = [{name = "LagoLunatic"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["romhacking", "gamecube", "gcn", "gcm", "rarc", "bti", "yaz0", "dol", "bfn", "bmg", "j3d", "jpc"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment",
]

requires-python = ">=3.11"
dependencies = [
  "numpy>=2.2.3",
  "pillow>=11.1.0",
]

[project.optional-dependencies]
speedups = [
  "PyFastBTI @ git+https://github.com/LagoLunatic/PyFastBTI.git@da01c14562a4711e031fd0a01c52d2131035e228",
  "PyFastTextureUtils @ git+https://github.com/LagoLunatic/PyFastTextureUtils.git@786d7cda8210ec2ad01f3397059ebf4d24365391",
  "PyFastYaz0Yay0 @ git+https://github.com/LagoLunatic/PyFastYaz0Yay0.git@77cfa8b92cde95e8928a68e499c1d8d719e0c7ea",
]
