[project]
name = "gclib"
version = "1.0.0"
description = "Implementations of several file formats used by various GameCube games."
authors = [{name = "LagoLunatic"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["romhacking", "gamecube", "gcn", "gcm", "rarc", "bti", "yaz0", "dol", "bfn", "bmg", "j3d", "jpc"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment",
]

requires-python = ">=3.11"
dependencies = [
  "numpy>=2.2.3",
  "pillow>=11.1.0",
]

[project.optional-dependencies]
speedups = [
  "PyFastBTI @ git+https://github.com/LagoLunatic/PyFastBTI.git@800479b965d4d1997e619de6b01f4b496ad1a966",
  "PyFastTextureUtils @ git+https://github.com/LagoLunatic/PyFastTextureUtils.git@7e8b1b54558fa02cb1d69181a855e9292475bef6",
  "PyFastYaz0Yay0 @ git+https://github.com/LagoLunatic/PyFastYaz0Yay0.git@64bf7e38f27eeed1c6bcab6aefc2b682120e6d97",
]
