[project]
name = "gclib"
version = "1.0.0"
description = "Implementations of several file formats used by various GameCube games."
authors = [{name = "LagoLunatic"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
keywords = ["romhacking", "gamecube", "gcn", "gcm", "rarc", "bti", "yaz0", "dol", "bfn", "bmg", "j3d", "jpc"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment",
]

requires-python = ">=3.11"
dependencies = [
  "numpy>=2.2.3",
  "pillow>=11.1.0",
]

[project.optional-dependencies]
speedups = [
  "PyFastBTI @ git+https://github.com/LagoLunatic/PyFastBTI.git@13b24b028b62d199740044f15085f70878ea80a4",
  "PyFastTextureUtils @ git+https://github.com/LagoLunatic/PyFastTextureUtils.git@ec40de927daa6b59485e34ea01b8bab1ecd1a31a",
  "PyFastYaz0Yay0 @ git+https://github.com/LagoLunatic/PyFastYaz0Yay0.git@2adb8a8c00d98f98f245e0304094a0610203a82e",
]
